.kube/default/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kyc-service-svc
spec:
  ports:
    - name: web
      port: 3000
      targetPort: web

  selector:
    app: kyc-service
