.kube/default/base/uber-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uber-api-svc
spec:
  ports:
    - name: web
      port: 3000
      targetPort: web

  selector:
    app: api-uber
