.kube/default/base/uber-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uber-api-ingress
